tests/neg-custom-args/captures/cc-existential-conformance.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:10:24 -------------------
10 |  val y: A -> Fun[B^] = x // error
   |                        ^
   |                      Found:    (x : A -> (x²: A) -> B^{fresh})
   |                      Required: A -> A -> B^{any}
   |
   |                      Note that capability `fresh` is not included in capture set {any}
   |                      because fresh is not visible from any in value y.
   |
   |                      where:    any   is a root capability in the type of value y
   |                                fresh is a root capability associated with the result type of (x²: A): B^{fresh}
   |                                x     is a value in method test
   |                                x²    is a reference to a value parameter
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:11:29 -------------------
11 |  val z: A -> (x: A) -> B^ = y // error
   |                             ^
   |                             Found:    A -> A -> B^{y*}
   |                             Required: A -> (x: A) -> B^
   |
   |                             Note that capability `y*` is not included in capture set {any}.
   |
   |                             where:    ^   refers to a root capability in the type of value z
   |                                       any is the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:15:19 -------------------
15 |  val y: Fun[B^] = x // error
   |                   ^
   |                   Found:    (x : (x²: A) -> B^{fresh})
   |                   Required: A -> B^{any}
   |
   |                   Note that capability `fresh` is not included in capture set {any}
   |                   because fresh is not visible from any in value y.
   |
   |                   where:    any   is a root capability in the type of value y
   |                             fresh is a root capability associated with the result type of (x²: A): B^{fresh}
   |                             x     is a value in method test2
   |                             x²    is a reference to a value parameter
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:16:24 -------------------
16 |  val z: (x: A) -> B^ = y // error
   |                        ^
   |                        Found:    A -> B^{y*}
   |                        Required: (x: A) -> B^
   |
   |                        Note that capability `y*` is not included in capture set {any}.
   |
   |                        where:    ^   refers to a root capability in the type of value z
   |                                  any is the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
